# URL-Monitoring-Extension

./: README.md  activation.json  activationSchema copy.json  setup.py
certificates/: ca.pem  dev.pem  developer.pem
extension/: activationSchema.json  extension.yaml  pyproject.toml
extension/lib/: url_availability-0.0.10-py3-none-any.whl
url_availability/: __main__.py
url_availability.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
