[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "url_availability"
version = "0.0.1"
description = "Dynatrace URL availability monitoring extension"
requires-python = ">=3.10,<3.11"

dependencies = [
  "requests"
]

[tool.setuptools.packages.find]
where = ["."]
